@@ -138,6 +138,6 @@ compile farm for testing portability.
 Also, thanks to Érsek László, James Montgomerie, James Antill,
 saul@alien-science.org, Kent Mein, Marc Lehmann, Robert Lemmen, Mark Adler,
 Ricardo Correia, Karl Kalleberg, Michael Stone, Richard Lucassen, Duncan
-Mac-Vicar, Jari Aalto and Marcin Mirosław for useful feedback and bug reports
-for previous versions.
+Mac-Vicar, Jari Aalto, Marcin Mirosław and Jan Varho for useful feedback and
+bug reports for previous versions.
 
